Revision history for Perl extension Class::C3.

    - Pod typo fixes (RT#77453)

0.24 Sat, May 12, 2012
    - Require Class::C3::XS on 5.8 perls if a working compiler is found

0.23 Sat, Jun 19, 2010
    - Fix various documentation problems (Martin Becker).

0.22 Fri, Jan 29, 2010
    - Add note that people should be using MRO::Compat rather than
      Class::C3 directly.

0.21 Wed, Mar 25, 2009
    - Remove fake Build.PL. Module::Install doesn't support that anymore.
      (Florian Ragwitz)
    - Stop using auto_instal in Makefile.PL. Its use is strongly discouraged.
      (Closes RT#38051, RT#44541) (Simon Bertrang)

0.20 Mon, Dec 8, 2008
    - Prevent redefined warnings when Class::C3 is loaded explicitly after
      MRO::Compat has been loaded. Also add tests for this.

0.19 Mon, Jun 4, 2007
    - Added new goto tests, bumped XS version req

0.18 Sat, May 12, 2007
    - Just bumped XS version requirement

0.17 Tues, May 8, 2007
    - Remove Build.PL from the distribution

0.16 Thurs, May 3, 2007
    - Converted to Module::Install
    - Supports optional Class::C3::XS
    - Supports optional perl 5.9.5+ mro code
    - Fixed overload fallback edge cases.
    - Fix for overloading to method name string,
       from Ittetsu Miyazaki.

0.14 Tues, Sep 19, 2006
    - Fix for rt.cpan.org #21558
    - converted to Module::Build

0.13 Fri, Aug 25, 2006
    - Make use of Algorithm::C3 0.05's merge caching

0.12 Tues, July 18, 2006
    - clarifying docs for &initialize (thanks jcs)
    - applying patch from Robert Norris to add
      next::can() and maybe::next::method()
      functionality which allows safe probing of
      the presence of the next method

0.11 Thurs, Feb 23, 2006
    - added some more tests for edge cases
    - removed INIT, you must explicitly call &initialize now
        - added docs explaining this
        - altered tests as needed
    - moved the C3 algorithm to Algorithm::C3 and added
      that as a dependency to this module