@@ -1,6 +1,8 @@
 Revision history for Perl extension Class::C3.
 
     - Pod typo fixes (RT#77453)
+    - Only ask for Devel::Hide on perls where it will be actually used
+      (RT#81106)
 
 0.24 Sat, May 12, 2012
     - Require Class::C3::XS on 5.8 perls if a working compiler is found
